incluido el javascript

--- a/Preentrega 1 javascript/celulares.html
+++ b/Preentrega 1 javascript/celulares.html
@@ -57,7 +57,7 @@
                                 <a class="nav-link" href="consolas.html">Consola Videojuegos</a>
                             </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" href="juegos.html">Juegos</a>
+                                <a class="nav-link" href="index.html">Juegos</a>
                             </li>
 
                         </ul>
