--- a/Preentrega 1 javascript/index.html
+++ b/Preentrega 1 javascript/index.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="consolas.html">Consola Videojuegos</a>
                             </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" href="juegos.html">Juegos</a>
+                                <a class="nav-link" href="index.html">Juegos</a>
                             </li>
 
                         </ul>
@@ -173,6 +173,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
